RESOLVED FIXED30586
[GTK] Failing test media/video-src-empty.html
https://bugs.webkit.org/show_bug.cgi?id=30586
Summary [GTK] Failing test media/video-src-empty.html
Alejandro G. Castro
Reported 2009-10-20 11:18:28 PDT
media/video-src-empty.html
Attachments
Proposed patch (3.44 KB, patch)
2009-10-30 10:04 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2009-10-30 10:04:26 PDT
Created attachment 42214 [details] Proposed patch
Eric Seidel (no email)
Comment 2 2009-10-30 15:20:37 PDT
Comment on attachment 42214 [details] Proposed patch Looks sane enough to me.
WebKit Commit Bot
Comment 3 2009-11-01 07:55:08 PST
Comment on attachment 42214 [details] Proposed patch Clearing flags on attachment: 42214 Committed r50385: <http://trac.webkit.org/changeset/50385>
WebKit Commit Bot
Comment 4 2009-11-01 07:55:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.