2009-11-01  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30586
        [GTK] Failing test media/video-src-empty.html

        * platform/gtk/Skipped: Unskip fixed test.
2009-11-01  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=30586
        [GTK] Failing test media/video-src-empty.html

        Correctly set network/ready state depending on GStreamer errors
        received on the bus.

        * platform/graphics/gtk/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mediaPlayerPrivateMessageCallback):

Canonical link: https://commits.webkit.org/41818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50385 268f45cc-cd09-0410-ab3c-d52691b4dbfc